--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.ActionBar.PrimarySurface"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="true"
+            android:background="@android:color/transparent">
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topappbar"
                 android:layout_width="match_parent"
@@ -31,6 +32,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.google.android.material.navigation.NavigationView
+        style="@style/Navigationdrawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
