--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
     <style name="Edittext" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">#9E9E9E</item>
-
+        <item name="android:textColorHighlight">@color/black</item>
         <item name="backgroundColor">@color/white</item>
     </style>
 <!--    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.*">-->
