--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,54 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:openDrawer="start"
+    android:background="#ffffff"
     android:id="@+id/drawerlayout">
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.ActionBar.PrimarySurface"
-            android:fitsSystemWindows="true"
-            android:background="@android:color/transparent">
-            <com.google.android.material.appbar.MaterialToolbar
+        >
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/topappbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                app:navigationIcon="@mipmap/ic_launcher"
-                style = "@style/Navigationtext"
+                app:navigationIcon="@drawable/home_menu_icon"
                 android:background="@android:color/transparent"
                 android:elevation="0dp"/>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
+        <FrameLayout
+            android:id="@+id/frame_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
     <com.google.android.material.navigation.NavigationView
-        style="@style/Navigationtext"
+        android:id="@+id/navigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/navigation_drawer"
+        app:itemBackground="@android:color/transparent"
+        app:itemIconTint="@color/navigation_bg"
+        app:itemTextColor="@color/navigation_bg"
         app:headerLayout="@layout/header_layout"
+       >
 
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="vertical"
-            android:padding="16dp">
             <TextView
-                android:id="@+id/logout"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Version 1.0" />
-        </LinearLayout>
+
 
     </com.google.android.material.navigation.NavigationView>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
