--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -3,22 +3,23 @@
     <group
         android:id="@+id/group1"
         android:checkableBehavior="single"
-
         >
 
         <item
-
+            android:enabled="true"
             android:icon="@mipmap/search_icon_nav"
-            android:id="@+id/item1"
+            android:id="@+id/search"
             android:title="Suche"
             android:checked="true"
             />
         <item
+            android:enabled="true"
             android:icon="@mipmap/news_icon"
-            android:id="@+id/title"
+            android:id="@+id/news"
             android:title="Gastro News"/>
         <item
-            android:id="@id/item3"
+            android:enabled="true"
+            android:id="@+id/contact"
             android:title="Kontakt"
             android:icon="@mipmap/contact_us"/>
     </group>
