--- a/app/src/main/res/layout/item_7reg.xml
+++ b/app/src/main/res/layout/item_7reg.xml
@@ -8,6 +8,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:cardCornerRadius="10dp"
+        android:background="@drawable/cardshape_restaurants_list"
 
         >
 
@@ -21,7 +22,7 @@
                 android:id="@+id/item_7backimg"
                 android:scaleType="fitXY"
                 android:layout_centerInParent="true"
-                android:background="@color/black"
+
                 />
             <androidx.cardview.widget.CardView
 
@@ -29,6 +30,7 @@
                 android:layout_height="90dp"
                 android:layout_centerInParent="true"
                 android:backgroundTint="@android:color/transparent"
+
                 >
             <ImageView
                 android:background="@drawable/restaurants_menu_cirlce"
@@ -50,23 +52,24 @@
                  android:textColor="@color/black"
                  android:gravity="center"
                  />
-             <ImageView
+             <de.hdodenhof.circleimageview.CircleImageView
                  android:layout_width="60dp"
                  android:layout_height="60dp"
                  android:layout_gravity="center"
                  android:id="@+id/icon_image"
-                 android:background="@drawable/restaurants_menu_cirlce"
+
                  />
 
             </androidx.cardview.widget.CardView>
             <TextView
                 android:textColor="@color/white"
                 android:id="@+id/text_7reg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
                 android:layout_centerInParent="true"
                 android:layout_alignParentBottom="true"
-                android:textSize="20sp"
+                android:gravity="center"
+
                 />
 
         </RelativeLayout>
