--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
 
-
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <LinearLayout
         android:id="@+id/linear1"
         android:background="@drawable/firstbg"
@@ -89,7 +95,8 @@
         android:layout_below="@id/linear1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linear2">
         <TextView
             android:layout_marginTop="20dp"
             android:textStyle="bold"
@@ -116,11 +123,39 @@
             android:gravity="center"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rec_7region"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_below="@id/linear2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:text="Wonach hast Du Lust?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:text="Entdecke Top-Restaurants"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rec_TopRestaurant"/>
+        </LinearLayout>
 
     </LinearLayout>
-
+</androidx.core.widget.NestedScrollView>
 </RelativeLayout>
