--- a/app/src/main/res/layout/item_7reg.xml
+++ b/app/src/main/res/layout/item_7reg.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
-        android:layout_margin="20dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_margin="10dp"
+        android:layout_width="200dp"
+        android:layout_height="180dp"
         app:cardCornerRadius="10dp"
-        android:background="@drawable/cardshape_restaurants_list"
+
 
         >
 
@@ -22,10 +22,10 @@
                 android:id="@+id/item_7backimg"
                 android:scaleType="fitXY"
                 android:layout_centerInParent="true"
-
+                android:alpha="0.8"
                 />
             <androidx.cardview.widget.CardView
-
+                app:cardElevation="0dp"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_centerInParent="true"
@@ -53,8 +53,8 @@
                  android:gravity="center"
                  />
              <de.hdodenhof.circleimageview.CircleImageView
-                 android:layout_width="60dp"
-                 android:layout_height="60dp"
+                 android:layout_width="50dp"
+                 android:layout_height="50dp"
                  android:layout_gravity="center"
                  android:id="@+id/icon_image"
 
