--- a/app/src/main/res/drawable/home_menu_icon.xml
+++ b/app/src/main/res/drawable/home_menu_icon.xml
@@ -2,14 +2,14 @@
     android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M3.07,13L23.81,13"
-        android:strokeColor="#bdae6a" android:strokeLineCap="round"
+        android:strokeColor="#050505" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="4"/>
     <path android:fillColor="#00000000"
         android:pathData="M3.07,24L44.93,24"
-        android:strokeColor="#bdae6a" android:strokeLineCap="round"
+        android:strokeColor="#0C0C0C" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="4"/>
     <path android:fillColor="#00000000"
         android:pathData="M24.62,35L44.93,35"
-        android:strokeColor="#bdae6a" android:strokeLineCap="round"
+        android:strokeColor="#000000" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="4"/>
 </vector>
