--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -96,7 +96,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/linear2">
+        android:id="@+id/linear2"
+        android:background="@color/recbg">
         <TextView
             android:layout_marginTop="20dp"
             android:textStyle="bold"
@@ -160,7 +161,8 @@
             android:layout_below="@id/linear3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/recbg">
             <TextView
                 android:layout_marginTop="20dp"
                 android:textStyle="bold"
@@ -178,6 +180,7 @@
                 android:gravity="center"/>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
