--- a/app/src/main/res/layout/small_images.xml
+++ b/app/src/main/res/layout/small_images.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp"
+    android:gravity="center">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="40dp"
+            app:civ_border_color="#6E612B"
+            app:civ_border_width="5dp"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             android:id="@+id/small_image"
-            android:background="@drawable/small_iconbg"
-            android:layout_margin="8dp"/>
-    </LinearLayout>
+
+            />
+
 </RelativeLayout>
