--- a/app/src/main/res/layout/activity_item_singlerec.xml
+++ b/app/src/main/res/layout/activity_item_singlerec.xml
@@ -12,6 +12,16 @@
         android:layout_height="200dp"
         android:id="@+id/single_listimg"
         android:scaleType="fitXY"/>
+    <TextView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/reting"
+        android:background="@drawable/rating_bg"
+        android:layout_gravity="end"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:textColor="@color/white"/>
+
 </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_below="@id/c1"
