--- a/app/src/main/res/layout/small_images.xml
+++ b/app/src/main/res/layout/small_images.xml
@@ -7,8 +7,8 @@
     android:gravity="center">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_color="#6E612B"
-            app:civ_border_width="5dp"
+            app:civ_border_color="#B8A760"
+            app:civ_border_width="3dp"
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:id="@+id/small_image"
